app/assets/stylesheets/themes/_yesno.sass
//
// Theme: Default
// ==============
// Theme files wrap Kickstart's mixins into duplicate mixins without the
// "-default". This allows theme artists to insert their own styles by
// extending the default ones. Because the default theme just does direct
// assignment to the final namespaces, it overrides without actually
// changing anything.
//

@import core/_normalize

// Variables
// ---------

// Grayscale
$white: (dark: #F7F7F7, darker: #EDEDED, darkest: #CCC)
$gray:  (lightest: #BBB, lighter: #AAA, light: #999, dark: #777, darker: #666, darkest: #555)
$black: (lightest: #444, lighter: #333, light: #222)

// Rainbow
$colors: (red: #CA3518, orange: darkorange, yellow: #ffe312, green: #58AA00, blue: #47A5DF, violet: darkmagenta)

@font-face
  font-family: 'Graphik'
  src: font-url('Graphik-Regular-Web.eot')
  src: font-url('Graphik-Regular-Web.eot#iefix') format('embedded-opentype')
  src: font-url('Graphik-Regular-Web.woff') format('woff')
  src: font-url('Graphik-Regular-Web.ttf') format('truetype')
  font-weight:  normal
  font-style:   normal
  font-stretch: normal

@font-face
  font-family: 'Abrade'
  src: font-url('abrade.eot')
  src: font-url('abrade.eot#iefix') format('embedded-opentype')
  src: font-url('abrade.woff') format('woff')
  src: font-url('abrade.ttf') format('truetype')
  font-weight:  normal
  font-style:   normal
  font-stretch: normal

// Ten point design variables
// --------------------------
// Modifying just these ten variables will take care of 90% of your theme

$primary-color:       map-get($colors, blue)
$secondary-color:     map-get($white, darker)
$space:               25px
$heading-font-family: 'Abrade', helvetica neue, sans-serif
$default-font-family: 'Graphik', helvetica neue, sans-serif
$mono-font-family:    'ubuntu-mono', monospace
$default-font-size:   16px
$default-font-color:  map-get($gray, darkest)
$default-line-height: 1.45rem

// --------------------------

$scalingFactor: 0.2vw

$rootElement: (paddingV: 5px, paddingH: 12px, border-radius: 3px)

//
// Core styling
// ------------
// Lowest-level styling meant to be inherited by components.
//

@import core/_index

// Grid

=wrapper($args...)
  +wrapper-default($args...)

// Typography
// ----------

=pre
  +pre-default

pre
  +pre

=code
  +code-default

=p($args...)
  +p-default($args...)

=page-heading
  +page-heading-default
  h1, h2, h3, h4, h5, h6
    // Styles should go here.

=hero
  +hero-default
  @content

=heading-xxl
  +heading-xxl-default
  @content

=heading-xl
  +heading-xl-default
  @content

=heading-lg
  +heading-lg-default
  @content

=heading-md
  +heading-md-default
  @content

=heading-rg
  +heading-rg-default
  @content

=heading-sm
  +heading-sm-default
  @content

=heading-xs
  +heading-xs-default
  @content

=heading-xxs
  +heading-xxs-default
  @content

h1, h2, h3, h4, h5, h6
  font-family: $heading-font-family

h1
  +heading-lg

h2
  +heading-md

h3
  +heading-rg

h4
  +heading-sm

h5
  +heading-xs

h6
  +heading-xxs

=type
  +type-default

html
  +type

=list($args...)
  +list-default($args...)

//
// Base Components
// ===============
// Base components get imported first so they can be custom themed and
// used again in other parts of the core library.
//

@import core/_base_components

// Alerts
// ------

=alert($args...)
  +alert-default($args...)

// Buttons
// -------

=button($args...)
  +button-default($args...)

=button-group($args...)
  +button-group-default($args...)

=button-color($args...)
  +button-color-default($args...)

=button-size($args...)
  +button-size-default($args...)

// Containers
// ----------

=container($args...)
  +container-default($args...)

=container-color($args...)
  +container-color-default($args...)

// HR
// --

=hr
  +hr-default

// Icons
// -----

=icon($args...)
  +icon-default($args...)

hr
  +hr

// Images
// ------

=thumbnail-content($args...)
  +thumbnail-content-default($args...)

=thumbnail
  +thumbnail-default

// Labels
// ------

=label($args...)
  +label-default($args...)

// Navigation
// ----------

=navbar($args...)
  +navbar-default($args...)

=navbar-color($args...)
  +navbar-color-default($args...)

=dropdown_menu
  +dropdown_menu-default

// Table
// -----

=table($args...)
  +table-default($args...)

=table-zebra($args...)
  +table-zebra-default($args...)

=table-hover($args...)
  +table-hover-default($args...)

=table-bordered($args...)
  +table-bordered-default($args...)

=table-blank($args...)
  +table-blank-default($args...)

//
// Dependent Components
// ====================
// Dependent components keep code DRY by reusing core and base
// componenets that have already been styled by the theme.
//

@import core/_dependent_components

// Forms
// -----

=form($args...)
  +form-default($args...)

=form_group($args...)
  +form_group-default($args...)

// Growls
// ------

=growl
  +growl-default

// Modals
// ------

=modal()
  +modal-default()

// Pagination
// ----------

=pagination($args...)
  +pagination-default($args...)

// Tabs
// ----

=tabs
  +tabs-default

=tab_pane_container
  +tab_pane_container-default

// Tooltips
// --------

=tooltip_trigger
  +tooltip_trigger-default

@import core/_direct-apply.sass
@import vendor/_index

